--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -21,8 +21,8 @@
                 <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
                     <div class="form-group">
                         <label for="nombreUsuario">Nombre de Usuario</label>
-                        <input type="text" name="nombreUsuario" id="nombreUsuario" class="form-control"
-                        [(ngModel)]="nombreUsuario" required>
+                        <input type="text" name="userName" id="userName" class="form-control"
+                        [(ngModel)]="userName" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña</label>
