--- a/src/app/auth/registro.component.html
+++ b/src/app/auth/registro.component.html
@@ -20,14 +20,14 @@
             <div class="card-body">
               <form #f="ngForm" (ngSubmit)="onRegister()" novalidate>
                 <div class="form-group">
-                  <label for="nombre">Nombre</label>
-                  <input type="text" name="nombre" id="nombre" class="form-control"
-                  [(ngModel)]="nombre" required>
+                  <label for="name">Nombre</label>
+                  <input type="text" name="name" id="name" class="form-control"
+                  [(ngModel)]="name" required>
               </div>
                 <div class="form-group">
-                    <label for="nombreUsuario">Nombre de Usuario</label>
-                    <input type="text" name="nombreUsuario" id="nombreUsuario" class="form-control"
-                    [(ngModel)]="nombreUsuario" required>
+                    <label for="userName">Nombre de Usuario</label>
+                    <input type="text" name="userName" id="userName" class="form-control"
+                    [(ngModel)]="userName" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
