--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4" style="background-color: #ec0000!important; color:white" >
+    <a class="navbar-brand" href="#">Birras Challenge</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,7 +9,7 @@
           <a class="nav-link" routerLink="/"><i class="fas fa-home"></i> Inicio</a>
         </li>
         <li class="nav-item" *ngIf="isLogged">
-          <a class="nav-link" routerLink="/lista"><i class="far fa-list-alt"></i> Lista</a>
+          <a class="nav-link" routerLink="/temperature"><i class="fas fa-temperature-high"></i> temperatura</a>
         </li>
         <li class="nav-item" *ngIf="!isLogged">
             <a class="nav-link"  routerLink="/login"><i class="fas fa-sign-in-alt"></i> Iniciar Sesión</a>
@@ -21,3 +21,6 @@
       </ul>
     </div>
   </nav>
+
+
+  
